<resources>
    <string name="app_name">CoLiving Demo</string>
    <string name="google_maps_key">AIzaSyBmNONdM3iJYwIRpj1KRBghbS3XV4XpUzY</string>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="move_to_maps_activity">Move to Maps Activity</string>
    <string name="open_maps_fragment">Open Maps on Fragment</string>
    <string name="search_results">Search Results</string>
    <string name="bangalore">Bangalore</string>
    <string name="hsr_layout">HSR Layout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="location_tag1">Sector 2</string>
    <string name="location_tag2">HSR Layout</string>
    <string name="includes_food">Includes Food</string>
    <string name="price_per_bed">8,500/</string>
    <string name="bed">Bed</string>
    <string name="price_deposit">Deposit: 12000</string>
    <string name="image_of_the_place_mentioned">Image of the place mentioned.</string>
    <string name="from">From</string>
    <string name="back_to_search">Back to search</string>
    <string name="screen_3">Screen 3</string>
    <string name="screen_4">Screen 4</string>
    <string name="that_wonderful_house">That Wonderful House</string>
    <string name="availability">Availability</string>
    <string name="twin_rooms">Twin Rooms</string>
    <string name="available">Available</string>
    <string name="_8500_bed">8,500/Bed</string>
    <string name="status">Status</string>
    <string name="single_rooms">Single Rooms</string>
    <string name="_16_500">16,500</string>
    <string name="only_2_left">Only 2 left</string>
    <string name="shared_rooms">Shared Rooms</string>
    <string name="next_available_dec_25">Next Available Dec 25</string>
    <string name="_6_500_bed">6,500/Bed</string>
    <string name="amenities">Amenities</string>
    <string name="sofa">Sofa</string>
    <string name="wifi">Wifi</string>
    <string name="television">Television</string>
    <string name="washing_machine">Washing Machine</string>
    <string name="maps">Maps</string>
    <string name="rent_details">Rent Details</string>
    <string name="other_terms">Other Terms</string>
    <string name="visit">Visit</string>
    <string name="book">Book</string>
    <string name="user_dashboard">User Dashboard</string>
    <string name="liv_24_7">24/7 Liv</string>
    <string name="rs_8622">Rs. 8622</string>
    <string name="pay_now">Pay now</string>
    <string name="amount_due_nov_18">Amount Due - Nov 18</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="register">Register</string>
    <string name="my_visits">My Visits</string>
    <string name="upcoming">Upcoming</string>
    <string name="past">Past</string>
    <string name="dec_13_2018">Dec 13, 2018</string>
    <string name="where">Where</string>
    <string name="_10_30_am">10:30 AM</string>
    <string name="sector_2">Sector 2</string>
    <string name="change">Change</string>
    <string name="get_direction">Get Direction</string>
    <string name="google_sign_in">Google Sign In</string>
    <string name="check_icon">Check Icon</string>
    <string name="sector_2_hsr_layout">Sector 2, HSR Layout</string>
    <string name="faq_question_sample">What are the parameters that determine the rent of my property?</string>
    <string name="faq">FAQ</string>

    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="tvPhoneNumber">+91 99 898 88301</string>
    <string name="facebook_sign_in">Facebook Sign In</string>
    <string name="facebook_app_id">370312136987189</string>
    <string name="fb_login_protocol_scheme">fb370312136987189</string>
    <string name="facebook">Facebook</string>

</resources>
