<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="120dp">

    <android.support.v7.widget.CardView
        android:id="@+id/cv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ivCardImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="#D8D6D6"
                android:contentDescription="@string/image_of_the_place_mentioned"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginStart="120dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ivCardImage"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tvLocationTag1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sector_2_hsr_layout"
                    android:textColor="#000"
                    android:textSize="18sp"
                    android:textStyle="normal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/tvFrom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="26dp"
                    android:text="@string/from"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/tvLocationTag1"
                    app:layout_constraintTop_toBottomOf="@+id/tvLocationTag1" />

                <TextView
                    android:id="@+id/tvPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="32dp"
                    android:text="@string/price_per_bed"
                    android:textColor="#000"
                    android:textSize="20sp"
                    android:textStyle="normal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tvFrom"
                    app:layout_constraintTop_toBottomOf="@+id/tvLocationTag1" />

                <TextView
                    android:id="@+id/tvBed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="1dp"
                    android:text="@string/bed"
                    android:textColor="#000"
                    android:textSize="15sp"
                    android:textStyle="normal"
                    app:layout_constraintBottom_toBottomOf="@+id/tvPrice"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/tvPrice" />

                <TextView
                    android:id="@+id/tvIncludesFood"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/includes_food"
                    android:textSize="12sp"
                    android:textStyle="normal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/tvFrom" />

                <ImageView
                    android:id="@+id/ivIconCheckCircle"
                    android:layout_width="15dp"
                    android:layout_height="12dp"
                    android:layout_marginStart="2dp"
                    app:layout_constraintBottom_toBottomOf="@+id/tvIncludesFood"
                    app:layout_constraintStart_toEndOf="@+id/tvIncludesFood"
                    app:layout_constraintTop_toTopOf="@+id/tvIncludesFood"
                    app:srcCompat="@drawable/ic_action_check_circle"
                    android:contentDescription="@string/check_icon" />

                <TextView
                    android:id="@+id/tvDeposit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/price_deposit"
                    android:textSize="12sp"
                    android:textStyle="normal"
                    app:layout_constraintBottom_toBottomOf="@+id/ivIconCheckCircle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/ivIconCheckCircle"
                    app:layout_constraintTop_toTopOf="@+id/ivIconCheckCircle" />

            </android.support.constraint.ConstraintLayout>

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>