<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="224dp"
    android:orientation="vertical"

    tools:context=".MainScreen1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <ImageView
            android:id="@+id/ivIconClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_close"
            android:layout_marginEnd="16dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/poppins"
            android:text="@string/login"
            android:textSize="20sp"
            android:textColor="#FF4918"
            android:paddingStart="40dp"
            android:gravity="center_vertical"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <TextView
            android:id="@+id/tvSignup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/poppins"
            android:text="@string/sign_up"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            android:paddingStart="40dp"
            android:gravity="center_vertical"
            android:background="#FF4918"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <ImageView
            android:id="@+id/ivIconPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_phone"
            android:layout_marginStart="40dp"
            android:layout_centerVertical="true"/>

        <TextView
            android:id="@+id/tvPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/poppins"
            android:text="@string/tvPhoneNumber"
            android:textSize="20sp"
            android:textColor="#000000"
            android:paddingStart="70dp"
            android:gravity="center_vertical"/>

    </RelativeLayout>

</LinearLayout>